Got bootstrap styling working.

--- a/src/main/resources/assets/styles.css
+++ b/src/main/resources/assets/styles.css
@@ -1,25 +1,4 @@
 
-#app-region {
-	background-color: red;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
-#resident-list-region {
-	position: absolute;
-	top: 50px;
-	bottom: 0;
-	left: 0;
-    width: 200px;
-}
-
-#selected-resident-region {
-	position: absolute;
-	top: 50px;
-	bottom: 0;
-	right: 0;
-	left: 200px;
+body {
+	padding-top: 70px;
 }
