--- a/src/main/resources/assets/css/styles.css
+++ b/src/main/resources/assets/css/styles.css
@@ -7,6 +7,10 @@ body {
     margin-bottom:10px;
 }
 
+.admin-tabs {
+    margin-bottom:10px;
+}
+
 .datepicker-dropdown {
     z-index: 1200   !important;
 }
